@@ -1,3 +1,9 @@
+2003-07-02  Moritz Schulte  <moritz@g10code.com>
+
+	* Makefile.am (TESTS): Added: ac.
+
+	* ac.c: New file.
+
 2003-06-18  Werner Koch  <wk@gnupg.org>
 
 	* basic.c (check_cbc_mac_cipher): Adjusted for new API of get_blklen
